--- a/force-app/main/default/classes/ResourceRemote.cls
+++ b/force-app/main/default/classes/ResourceRemote.cls
@@ -1,39 +1,39 @@
 public with sharing class ResourceRemote {
 
-	@AuraEnabled
-	public static List<ResourceService.ResourceWrapper> getResources(String resourceType, String resourceMode) {
+    @AuraEnabled
+    public static ResourceService.ResourceWrapperContainer getResources(String resourceType, String resourceMode) {
 
-		ResourceService resourceService = (ResourceService) ClassFactory.newInstance(ResourceService.class);
-		if('Favorite'.equalsIgnoreCase(resourceMode)) {
-			return resourceService.getFavoriteResources(resourceType);
-		} else {
-			return resourceService.getResources(resourceType);
-		}
-	}
+        ResourceService resourceService = (ResourceService) ClassFactory.newInstance(ResourceService.class);
+        if ('Favorite'.equalsIgnoreCase(resourceMode)) {
+            return resourceService.getFavoriteResources(resourceType);
+        } else {
+            return resourceService.getResources(resourceType);
+        }
+    }
 
-	@AuraEnabled
-	public static void setResourceAction(String resourceId, Boolean isFavorite, Boolean isVoted) {
+    @AuraEnabled
+    public static void setResourceAction(String resourceId, Boolean isFavorite, Boolean isVoted) {
 
-		String participantId = CommunityService.getParticipantId();
-		String resourceActionQuery =
-				'SELECT Id, ' +
-					'IsFavorite__c, ' +
-					'IsVoted__c ' +
-				'FROM Resource_Action__c ' +
-				'WHERE Resource__c = \'' + resourceId + '\'' + ' AND Participant__c = \'' + participantId + '\'';
-		DatabaseProxy databaseProxy = (DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class);
-		List<Resource_Action__c> actions = (List<Resource_Action__c>) databaseProxy.query(resourceActionQuery);
+        String participantId = CommunityService.getParticipantId();
+        String resourceActionQuery =
+                'SELECT Id, ' +
+                        'IsFavorite__c, ' +
+                        'IsVoted__c ' +
+                        'FROM Resource_Action__c ' +
+                        'WHERE Resource__c = \'' + resourceId + '\'' + ' AND Participant__c = \'' + participantId + '\'';
+        DatabaseProxy databaseProxy = (DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class);
+        List<Resource_Action__c> actions = (List<Resource_Action__c>) databaseProxy.query(resourceActionQuery);
 
-		Resource_Action__c action;
-		if(actions.size() == 1) {
-			action = actions[0];
-		} else if(actions.isEmpty()) {
-			action = new Resource_Action__c(Resource__c = resourceId, Participant__c = participantId);
-		} else {
-			//todo add logic for logging these kind of exceptions, where a participant has more than one junction to the same resource
-		}
-		action.IsFavorite__c = isFavorite;
-		action.IsVoted__c = isVoted;
-		upsert action;
-	}
+        Resource_Action__c action;
+        if (actions.size() == 1) {
+            action = actions[0];
+        } else if (actions.isEmpty()) {
+            action = new Resource_Action__c(Resource__c = resourceId, Participant__c = participantId);
+        } else {
+            //todo add logic for logging these kind of exceptions, where a participant has more than one junction to the same resource
+        }
+        action.IsFavorite__c = isFavorite;
+        action.IsVoted__c = isVoted;
+        upsert action;
+    }
 }
