add hashCode method in TherapeuticAreaService.

--- a/force-app/main/default/classes/TherapeuticAreaService.cls
+++ b/force-app/main/default/classes/TherapeuticAreaService.cls
@@ -57,7 +57,7 @@ public with sharing class TherapeuticAreaService {
             return false;
         }
         public override Integer hashCode() {
-            return super.hashCode();
+            return (System.hashCode(String.valueOf(participantId)) * 2) ^ System.hashCode(String.valueOf(therapeuticAreaId));
         }
 
     }
